--- a/api/package.json
+++ b/api/package.json
@@ -26,5 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3"
   }
 }
