--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --setupFiles ./test/integration/jest.config.js --watchAll --detectOpenHandles --runInBand --verbose",
+    "unitTests": "jest --testPathPattern=/unit/ --watchAll --verbose",
+    "coverage": "jest --testPathPattern=/unit/ --coverage",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -18,13 +20,18 @@
   },
   "homepage": "https://github.com/brandolee15/postgressers#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
+    "mockingoose": "^2.15.2",
+    "mongodb-memory-server": "^8.2.0",
     "mongoose": "^6.1.7",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3"
