--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "mongodb-memory-server": "^8.2.0",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3"
   },
   "dependencies": {
