--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api/index.js"
+    "start": "node api/index.js",
+    "startDev": "nodemon api/index.js"
   },
   "repository": {
     "type": "git",
