--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
   "homepage": "https://github.com/brandolee15/postgressers#readme",
   "devDependencies": {
     "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -33,7 +28,6 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.7",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.1.7"
   }
 }
